crates/zizmor/tests/integration/snapshots/integration__fix_format_json__template_injection_fixes_json_patch.snap
---
source: crates/zizmor/tests/integration/fix_format_json.rs
expression: "zizmor().input(input_under_test(\"template-injection.yml\")).args([\"--fix=all\",\n\"--fix-format=json\", \"--quiet\"]).run()?"
---
error[template-injection]: code injection via template expansion
  --> @@INPUT@@:19:40
   |
16 |       - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # tag=v7.0.1
   |         -------------------------------------------------------------------- action accepts arbitrary code
17 |         with:
18 |           script: |
   |           ------ via this input
19 |             return "doing a thing: ${{ github.event.issue.title }}"
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → High

2 findings (1 suppressed): 0 informational, 0 low, 0 medium, 1 high
